# vin

./: Cargo.toml
src/: lib.rs  parser.rs
src/packet/: body.rs  error.rs  mod.rs  parser.rs  types.rs
src/serde/: de.rs  error.rs  gbk.rs  mod.rs  ser.rs
tests/: test_serialize.rs
