[package]
name = "vin"
version = "0.1.0"
authors = ["wangkeen <wangkeen@hzon.com>"]
edition = "2018"

[dependencies]
byteorder = "1.4.2"
encoding = "0.2.33"
hex = "0.4.2"
serde = { version = "1.0.123", features = ["derive"] }
serde_repr = "0.1.6"
thiserror = "1.0.23"
[dev-dependencies]
serde_test = "1.0.123"
